k8s-manifests/ingress/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app-b
  namespace: app-ab
spec:
  host: app-b
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
